{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 25,
  "lineage": "ad1bf6ff-5ddf-cd7f-7806-ba36b26a08e2",
  "resources": [
    {
      "module": "module.application",
      "mode": "managed",
      "type": "aws_lb",
      "name": "cmtr_vkkq9lu1_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:856238343966:loadbalancer/app/cmtr-vkkq9lu1-lb/d1a7eeaf77e31fb6",
            "arn_suffix": "app/cmtr-vkkq9lu1-lb/d1a7eeaf77e31fb6",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "cmtr-vkkq9lu1-lb-168565816.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:856238343966:loadbalancer/app/cmtr-vkkq9lu1-lb/d1a7eeaf77e31fb6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cmtr-vkkq9lu1-lb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0c1b57f525e459b20"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01758e17f5c46af73"
              },
              {
                "subnet_id": "subnet-02433a48c284d583b"
              },
              {
                "subnet_id": "subnet-0a2a616c82ab64fb5"
              }
            ],
            "subnets": [
              "subnet-01758e17f5c46af73",
              "subnet-02433a48c284d583b",
              "subnet-0a2a616c82ab64fb5"
            ],
            "tags": {
              "Name": "cmtr-vkkq9lu1-lb"
            },
            "tags_all": {
              "Name": "cmtr-vkkq9lu1-lb"
            },
            "vpc_id": "vpc-0b45ea480fd0c4314",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:856238343966:loadbalancer/app/cmtr-vkkq9lu1-lb/d1a7eeaf77e31fb6"
          },
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.cmtr_vkkq9lu1_vpc",
            "module.network_security.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.application",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:856238343966:listener/app/cmtr-vkkq9lu1-lb/d1a7eeaf77e31fb6/2f11dbe27a746ecb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:856238343966:targetgroup/cmtr-vkkq9lu1-tg/1099d0c00e239fdf",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:856238343966:listener/app/cmtr-vkkq9lu1-lb/d1a7eeaf77e31fb6/2f11dbe27a746ecb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:856238343966:loadbalancer/app/cmtr-vkkq9lu1-lb/d1a7eeaf77e31fb6",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:856238343966:listener/app/cmtr-vkkq9lu1-lb/d1a7eeaf77e31fb6/2f11dbe27a746ecb"
          },
          "dependencies": [
            "module.application.aws_lb.cmtr_vkkq9lu1_lb",
            "module.application.aws_lb_target_group.cmtr_vkkq9lu1_tg",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.cmtr_vkkq9lu1_vpc",
            "module.network_security.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.application",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "cmtr_vkkq9lu1_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:856238343966:targetgroup/cmtr-vkkq9lu1-tg/1099d0c00e239fdf",
            "arn_suffix": "targetgroup/cmtr-vkkq9lu1-tg/1099d0c00e239fdf",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:856238343966:targetgroup/cmtr-vkkq9lu1-tg/1099d0c00e239fdf",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cmtr-vkkq9lu1-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b45ea480fd0c4314"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:856238343966:targetgroup/cmtr-vkkq9lu1-tg/1099d0c00e239fdf"
          },
          "dependencies": [
            "module.network.aws_vpc.cmtr_vkkq9lu1_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cmtr_vkkq9lu1_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:856238343966:internet-gateway/igw-09947a9a03202b56a",
            "id": "igw-09947a9a03202b56a",
            "owner_id": "856238343966",
            "region": "us-east-1",
            "tags": {
              "Name": "cmtr-vkkq9lu1-igw"
            },
            "tags_all": {
              "Name": "cmtr-vkkq9lu1-igw"
            },
            "vpc_id": "vpc-0b45ea480fd0c4314"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.cmtr_vkkq9lu1_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cmtr_vkkq9lu1_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:856238343966:route-table/rtb-0759c8c992714bf66",
            "id": "rtb-0759c8c992714bf66",
            "owner_id": "856238343966",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09947a9a03202b56a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cmtr-vkkq9lu1-rt"
            },
            "tags_all": {
              "Name": "cmtr-vkkq9lu1-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b45ea480fd0c4314"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "856238343966",
            "id": "rtb-0759c8c992714bf66",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.cmtr_vkkq9lu1_igw",
            "module.network.aws_vpc.cmtr_vkkq9lu1_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cad67e1e12de644d",
            "region": "us-east-1",
            "route_table_id": "rtb-0759c8c992714bf66",
            "subnet_id": "subnet-01758e17f5c46af73"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.cmtr_vkkq9lu1_igw",
            "module.network.aws_route_table.cmtr_vkkq9lu1_rt",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.cmtr_vkkq9lu1_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07984b48ed6cc7a41",
            "region": "us-east-1",
            "route_table_id": "rtb-0759c8c992714bf66",
            "subnet_id": "subnet-02433a48c284d583b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.cmtr_vkkq9lu1_igw",
            "module.network.aws_route_table.cmtr_vkkq9lu1_rt",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.cmtr_vkkq9lu1_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05462dffa0d74d4f9",
            "region": "us-east-1",
            "route_table_id": "rtb-0759c8c992714bf66",
            "subnet_id": "subnet-0a2a616c82ab64fb5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.cmtr_vkkq9lu1_igw",
            "module.network.aws_route_table.cmtr_vkkq9lu1_rt",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.cmtr_vkkq9lu1_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:856238343966:subnet/subnet-01758e17f5c46af73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01758e17f5c46af73",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "856238343966",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "cmtr-vkkq9lu1-public-subnet-a"
            },
            "tags_all": {
              "Name": "cmtr-vkkq9lu1-public-subnet-a"
            },
            "vpc_id": "vpc-0b45ea480fd0c4314"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "856238343966",
            "id": "subnet-01758e17f5c46af73",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.cmtr_vkkq9lu1_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:856238343966:subnet/subnet-02433a48c284d583b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02433a48c284d583b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "856238343966",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "cmtr-vkkq9lu1-public-subnet-b"
            },
            "tags_all": {
              "Name": "cmtr-vkkq9lu1-public-subnet-b"
            },
            "vpc_id": "vpc-0b45ea480fd0c4314"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "856238343966",
            "id": "subnet-02433a48c284d583b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.cmtr_vkkq9lu1_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:856238343966:subnet/subnet-0a2a616c82ab64fb5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2a616c82ab64fb5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "856238343966",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "cmtr-vkkq9lu1-public-subnet-c"
            },
            "tags_all": {
              "Name": "cmtr-vkkq9lu1-public-subnet-c"
            },
            "vpc_id": "vpc-0b45ea480fd0c4314"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "856238343966",
            "id": "subnet-0a2a616c82ab64fb5",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.cmtr_vkkq9lu1_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cmtr_vkkq9lu1_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:856238343966:vpc/vpc-0b45ea480fd0c4314",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-075e52b00bfc9bc92",
            "default_route_table_id": "rtb-0eec0a37ebb272254",
            "default_security_group_id": "sg-0426193bccd36858a",
            "dhcp_options_id": "dopt-08f7717dcd8b26e3e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b45ea480fd0c4314",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eec0a37ebb272254",
            "owner_id": "856238343966",
            "region": "us-east-1",
            "tags": {
              "Name": "cmtr-vkkq9lu1-vpc"
            },
            "tags_all": {
              "Name": "cmtr-vkkq9lu1-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "856238343966",
            "id": "vpc-0b45ea480fd0c4314",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.network_security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:856238343966:security-group/sg-014db6e3341930492",
            "description": "Allow ssh-sg access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-014db6e3341930492",
            "ingress": [],
            "name": "cmtr-vkkq9lu1-ssh-sg",
            "name_prefix": "",
            "owner_id": "856238343966",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cmtr-vkkq9lu1-ssh-sg",
              "meta": "public"
            },
            "tags_all": {
              "Name": "cmtr-vkkq9lu1-ssh-sg",
              "meta": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b45ea480fd0c4314"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "856238343966",
            "id": "sg-014db6e3341930492",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.cmtr_vkkq9lu1_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:856238343966:security-group/sg-0c1b57f525e459b20",
            "description": "Allow public-http-sg access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c1b57f525e459b20",
            "ingress": [],
            "name": "cmtr-vkkq9lu1-public-http-sg",
            "name_prefix": "",
            "owner_id": "856238343966",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cmtr-vkkq9lu1-public-http-sg",
              "meta": "public"
            },
            "tags_all": {
              "Name": "cmtr-vkkq9lu1-public-http-sg",
              "meta": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b45ea480fd0c4314"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "856238343966",
            "id": "sg-0c1b57f525e459b20",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.cmtr_vkkq9lu1_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:856238343966:security-group/sg-0df8a3b2c8af1f444",
            "description": "Allow private-http-sg access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0df8a3b2c8af1f444",
            "ingress": [],
            "name": "cmtr-vkkq9lu1-private-http-sg",
            "name_prefix": "",
            "owner_id": "856238343966",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cmtr-vkkq9lu1-private-http-sg",
              "meta": "private"
            },
            "tags_all": {
              "Name": "cmtr-vkkq9lu1-private-http-sg",
              "meta": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b45ea480fd0c4314"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "856238343966",
            "id": "sg-0df8a3b2c8af1f444",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.cmtr_vkkq9lu1_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cidr_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0-cidr-109.172.192.49/32",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "109.172.192.49/32"
            ],
            "description": "ssh access",
            "from_port": 22,
            "id": "sgrule-3968082028",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-014db6e3341930492",
            "security_group_rule_id": "sgr-02b21a7e6deabe768",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.cmtr_vkkq9lu1_vpc",
            "module.network_security.aws_security_group.sg"
          ]
        },
        {
          "index_key": "0-cidr-18.153.146.156/32",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "18.153.146.156/32"
            ],
            "description": "ssh access",
            "from_port": 22,
            "id": "sgrule-649529492",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-014db6e3341930492",
            "security_group_rule_id": "sgr-0e5a44e5529c110ce",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.cmtr_vkkq9lu1_vpc",
            "module.network_security.aws_security_group.sg"
          ]
        },
        {
          "index_key": "1-cidr-109.172.192.49/32",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "109.172.192.49/32"
            ],
            "description": "http access",
            "from_port": 80,
            "id": "sgrule-2202417103",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0c1b57f525e459b20",
            "security_group_rule_id": "sgr-0fd376826744e83b9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.cmtr_vkkq9lu1_vpc",
            "module.network_security.aws_security_group.sg"
          ]
        },
        {
          "index_key": "1-cidr-18.153.146.156/32",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "18.153.146.156/32"
            ],
            "description": "http access",
            "from_port": 80,
            "id": "sgrule-1232412471",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0c1b57f525e459b20",
            "security_group_rule_id": "sgr-0fffbc112927728fb",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.cmtr_vkkq9lu1_vpc",
            "module.network_security.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.network_security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "2-sg-0",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "HTTP from public HTTP SG",
            "from_port": 80,
            "id": "sgrule-2223558398",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0df8a3b2c8af1f444",
            "security_group_rule_id": "sgr-0216dada949fe06f1",
            "self": false,
            "source_security_group_id": "sg-014db6e3341930492",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.cmtr_vkkq9lu1_vpc",
            "module.network_security.aws_security_group.sg"
          ]
        },
        {
          "index_key": "2-sg-1",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "HTTP from public HTTP SG",
            "from_port": 80,
            "id": "sgrule-3587404734",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0df8a3b2c8af1f444",
            "security_group_rule_id": "sgr-08953666895ed81a1",
            "self": false,
            "source_security_group_id": "sg-0c1b57f525e459b20",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.cmtr_vkkq9lu1_vpc",
            "module.network_security.aws_security_group.sg"
          ]
        }
      ]
    }
  ]
}